--- a/src/app/blocks/blocks.component.html
+++ b/src/app/blocks/blocks.component.html
@@ -1,10 +1,10 @@
 <div class="min-h-screen flex items-center justify-center  text-slate-50">
     <div class="">
 
-     
 
 
-        <div class="w-full max-w-4xl mx-4  p-8 space-y-6
+
+        <div class="w-full max-w-4xl md:mx-4  p-8 space-y-6
            transition-transform duration-300" [ngClass]="{
       'animate-success-bounce border-4 border-orange-500': result === 'success',
       'animate-error-shake ring-4 ring-red-600': result === 'error',
